<resources>
    <string name="app_name">MiniCalculator</string>
    <string name="slash">/</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="subtract">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mutliply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="back">bk</string>
    <string name="percent">%</string>
    <string name="prenthesis">( )</string>
    <string name="cancel">C</string>
    <string name="equal">=</string>
    <string name="bk">Bk</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="backs">X</string>
</resources>
