<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.minicalculator.MainActivity">

    <include
        layout="@layout/calculator_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/cancel"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/btn_small_bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/prenthesis"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/btn_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/percent"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@color/colorFuncBtnBackground"
                android:text="@string/backs"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_7"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_8"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_9"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/mutliply"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_4"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_5"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_6"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/subtract"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_1"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="2"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_3"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/plus"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/dot"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/_0"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/slash"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorFuncBtnBackground"
                android:minHeight="80dp"
                android:text="@string/equal"
                android:textColor="@color/colorFuncBtnText"
                android:textSize="30sp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
